2007-07-03  Alex Roitman  <shura@gramps-project.org>
	* example/gramps/example.gramps: Update example to conform to
	the new XML version.

2007-07-03  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/Editors/_EditNote.py: "Unicode control character" menu removed.
	* src/MarkupText.py (class GtkSpellState): added;
	(class MarkupBuffer): improved editor behavior.

2007-07-02  Brian Matherly  <brian@gramps-project.org>
            Johan Gonqvist <johan.gronqvist@gmail.com>
	* src/ReportBase/_ReportDialog.py (size_changed):
	* src/ReportBase/_CommandLineReprot.py (parse_option_str):
	  Translate "Custom Size" string.

2007-07-02  Robert Cawley  <rjc@cawley.id.au>
	* src/DataViews/_Relationship.py (info_string): Typo.

2007-06-30  Alex Roitman  <shura@gramps-project.org>
	* src/ReportBase/_TemplateParser.py: Close file after parsing.
	* src/ReportBase/_ReportOptions.py (OptionListCollection.parse):
	Close file after parsing.
	* src/ReportBase/_PaperMenu.py: Close file after parsing.
	* src/plugins/BookReport.py (BookList.parse): Close file after parsing.
	* src/Filters/_FilterList.py (load): Close file after parsing.
	* src/BaseDoc.py (StyleSheetList.parse): Close file after parsing.

2007-06-28  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/GtkPrint.py: Minor fix.
	* src/ScratchPad.py (ScratchSourceLink.tooltip): Typo.

2007-06-27  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/LPRDoc.py (LPRDoc.open): Fix margin settings.
	* src/BasicUtils/Makefile.am: Use new filenames.
	* src/images/scalable/Makefile.am: Ship gramps-viewmedia.svg
	* src/TreeViews/_PersonTreeView.py: Use name_displayer.
	* src/ReportBase/_ReportUtils.py: Use name_displayer.
	* src/ReportBase/_CommandLineReport.py: Use name_displayer.
	* src/ReportBase/_BareReportDialog.py: Use name_displayer.
	* src/PluginUtils/_Tool.py: Use name_displayer.
	* src/plugins/TimeLine.py: Use name_displayer.
	* src/plugins/RelCalc.py: Use name_displayer.